# cs1-approximate_calculations

./: .gitignore  CMakeLists.txt  README.md
include/: functions.hpp
source/: functions.cpp  main.cpp
